# c2validator

./: LICENSE  README.md  pyproject.toml  pytest.ini
c2validator/: __init__.py  validator.py
src/c2validator/: __init__.py
tests/: tests_cpf_and_cnpj_generator.py  tests_cpf_and_cnpj_validator.py  tests_validaor_and_generator_base.py  tests_validator_and_generator_base.py
